--- a/src/app/office/editoffice-form/editoffice-form.component.html
+++ b/src/app/office/editoffice-form/editoffice-form.component.html
@@ -4,17 +4,20 @@
       <div class="form-group">
         <label for="name">Name</label>
         <input type="text" [(ngModel)]="office.name"
-               class="form-control" id="name" name="name" placeholder="Enter your name"
-               required #name="ngModel">
+               class="form-control" id="name" name="name" placeholder="Enter your name">
       </div>
-      <div [hidden]="!name.pristine" class="alert alert-danger">Name is required</div>
       <div class="form-group">
         <label for="countofemployee">Count of employee</label>
         <input type="text" [(ngModel)]="office.countOfEmployee"
-               class="form-control" id="countofemployee" name="countofemployee" placeholder="Enter count of employee"
-               required #email="ngModel">
-        <div [hidden]="!email.pristine" class="alert alert-danger">count of employee is required</div>
+               class="form-control" id="countofemployee" name="countofemployee" placeholder="Enter count of employee">
       </div>
+      <div class="form-group">
+        <label for="computerList">Computer list</label>
+        <input type="text" [(ngModel)]="computerBuff"
+               class="form-control" id="computerList" name="computerList" placeholder="Enter count of employee">
+      </div>
+      <button class="btn btn-danger" (click)="addComputer()">Add</button>
+      <button class="btn btn-danger" (click)="removeComputer()">Delete</button>
       <button type="submit" [disabled]="!officeForm.form.valid" class="btn btn-info">Submit</button>
     </form>
   </div>
