--- a/src/app/office/office-list/office-list.component.html
+++ b/src/app/office/office-list/office-list.component.html
@@ -16,7 +16,7 @@
         <td>{{ office.countOfEmployee }}</td>
         <td>
           <div *ngFor="let computer of office.computerList">
-            {{ computer }}
+            {{ computer.id }} <br/>
           </div>
         </td>
         <td><li class="list-inline-item"><a routerLink="/editoffice/{{office.id}}" class="btn btn-info">Edit</a></li></td>
