--- a/src/app/office/editoffice-form/editoffice-form.component.html
+++ b/src/app/office/editoffice-form/editoffice-form.component.html
@@ -1,6 +1,6 @@
 <div class="card my-5">
   <div class="card-body">
-    <form (ngSubmit)="onSubmit()" #officeForm="ngForm">
+    <form #officeForm="ngForm">
       <div class="form-group">
         <label for="name">Name</label>
         <input type="text" [(ngModel)]="office.name"
@@ -18,7 +18,7 @@
       </div>
       <button class="btn btn-danger" (click)="addComputer()">Add</button>
       <button class="btn btn-danger" (click)="removeComputer()">Delete</button>
-      <button type="submit" [disabled]="!officeForm.form.valid" class="btn btn-info">Submit</button>
+      <button type="submit" (click)="onSubmit()" [disabled]="!officeForm.form.valid" class="btn btn-info">Submit</button>
     </form>
   </div>
 </div>
