--- a/src/app/office/office-form/office-form.component.html
+++ b/src/app/office/office-form/office-form.component.html
@@ -1,6 +1,6 @@
 <div class="card my-5">
   <div class="card-body">
-    <form (ngSubmit)="onSubmit()" #officeForm="ngForm">
+    <form #officeForm="ngForm">
       <div class="form-group">
         <label for="name">Name</label>
         <input type="text" [(ngModel)]="office.name"
@@ -15,7 +15,7 @@
                required #countofemployee="ngModel">
         <div [hidden]="!countofemployee.pristine" class="alert alert-danger">count of employee is required</div>
       </div>
-      <button type="submit" [disabled]="!officeForm.form.valid" class="btn btn-info">Submit</button>
+      <button type="submit" (click)="onSubmit()" [disabled]="!officeForm.form.valid" class="btn btn-info">Submit</button>
     </form>
   </div>
 </div>
