--- a/src/app/computer/computer-form/computer-form.component.html
+++ b/src/app/computer/computer-form/computer-form.component.html
@@ -4,23 +4,17 @@
       <div class="form-group">
         <label for="CPU">CPU</label>
         <input type="text" [(ngModel)]="computerComponent.cpuId"
-               class="form-control" id="CPU" name="CPU" placeholder="Enter CPU"
-               required #name="ngModel">
+               class="form-control" id="CPU" name="CPU" placeholder="Enter CPU">
       </div>
-      <div [hidden]="!name.pristine" class="alert alert-danger">CPU is required</div>
       <div class="form-group">
         <label for="RAM">RAM</label>
         <input type="text" [(ngModel)]="computerComponent.ramId"
-               class="form-control" id="RAM" name="RAM" placeholder="RAM"
-               required #RAM="ngModel">
-        <div [hidden]="!RAM.pristine" class="alert alert-danger">RAM is required</div>
+               class="form-control" id="RAM" name="RAM" placeholder="RAM">
       </div>
       <div class="form-group">
         <label for="ROM">ROM</label>
         <input type="text" [(ngModel)]="computerComponent.romId"
-               class="form-control" id="ROM" name="ROM" placeholder="ROM"
-               required #ROM="ngModel">
-        <div [hidden]="!ROM.pristine" class="alert alert-danger">ROM is required</div>
+               class="form-control" id="ROM" name="ROM" placeholder="ROM">
       </div>
       <button type="submit" [disabled]="!computerForm.form.valid" class="btn btn-info">Submit</button>
     </form>
